--- a/source-code/index.html
+++ b/source-code/index.html
@@ -7,6 +7,6 @@
 
         <script type="text/javascript" src="js/traceur.js"></script>
         <script type="text/javascript" src="js/bootstrap.js"></script>
-        <script type="text/javascript" src="index.js"></script>
+        <script type="module" src="index.js"></script>
     </body>
 </html>
